image added, image centered, image distortion fixed

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .btn-container{
     height: 200px;
     position: relative;
-    background-color: aqua;
+    /* background-color: aqua; */
 }
 
 .btn-vertical-center{
@@ -27,5 +27,15 @@ button{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 200px;
+    height: 100px;
 }
+
+.hero-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    height: 400px;
+    object-fit: cover;
+}
+
